MOPP-166 - show details view cells.

--- a/MoppApp/MoppApp/Signed.storyboard
+++ b/MoppApp/MoppApp/Signed.storyboard
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="92" width="375" height="140"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RGN-M2-spN" id="SJZ-dC-M0S">
-                                    <frame key="frameInset" width="375" height="139.5"/>
+                                    <frame key="frameInset" width="375" height="140"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uSF-p1-GeJ">
@@ -81,10 +81,11 @@
                                 <rect key="frame" x="0.0" y="92" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="14K-3p-BhN" id="PiY-XA-8eY">
-                                    <frame key="frameInset" width="375" height="89.5"/>
+                                    <frame key="frameInset" width="375" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VLD-C0-SHw">
+                                            <color key="backgroundColor" red="0.0" green="1" blue="0.050397792599999998" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="30" id="O1T-sn-1Se"/>
                                                 <constraint firstAttribute="height" constant="30" id="TKX-Op-H8D"/>
@@ -102,7 +103,6 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="sAQ-ss-Mby" firstAttribute="top" secondItem="VLD-C0-SHw" secondAttribute="top" id="0Es-NN-lwH"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="Kxe-Yo-sHr" secondAttribute="bottom" constant="15" id="3nI-xq-SoP"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="sAQ-ss-Mby" secondAttribute="trailing" constant="15" id="EQa-5Z-zdL"/>
                                         <constraint firstItem="Kxe-Yo-sHr" firstAttribute="leading" secondItem="sAQ-ss-Mby" secondAttribute="leading" id="az9-JC-Da7"/>
@@ -111,6 +111,7 @@
                                         <constraint firstItem="Kxe-Yo-sHr" firstAttribute="trailing" secondItem="sAQ-ss-Mby" secondAttribute="trailing" id="nkz-bd-uf1"/>
                                         <constraint firstItem="sAQ-ss-Mby" firstAttribute="leading" secondItem="VLD-C0-SHw" secondAttribute="trailing" constant="10" id="vuY-mN-VJe"/>
                                         <constraint firstItem="Kxe-Yo-sHr" firstAttribute="top" secondItem="sAQ-ss-Mby" secondAttribute="bottom" constant="15" id="wAL-NA-FXD"/>
+                                        <constraint firstItem="sAQ-ss-Mby" firstAttribute="top" secondItem="PiY-XA-8eY" secondAttribute="topMargin" constant="5" id="zVq-fB-n5r"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -123,7 +124,7 @@
                                 <rect key="frame" x="0.0" y="182" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ohU-sB-g2d" id="um3-bN-aF2">
-                                    <frame key="frameInset" width="375" height="89.5"/>
+                                    <frame key="frameInset" width="375" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vv6-L0-b7s">
@@ -165,7 +166,7 @@
                                 <rect key="frame" x="0.0" y="272" width="375" height="117"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ef2-dW-brT" id="LgW-J8-Kc3">
-                                    <frame key="frameInset" width="375" height="116.5"/>
+                                    <frame key="frameInset" width="375" height="117"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3N2-M5-sR5">
@@ -211,6 +212,27 @@
                                     <outlet property="signatureNameLabel" destination="zeO-Lt-ZWp" id="qAi-cn-wwk"/>
                                     <outlet property="signatureValidityLabel" destination="uRp-0x-KnX" id="zY6-CD-Nka"/>
                                 </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TestIdentifier" rowHeight="133" id="dH6-eV-iGR">
+                                <rect key="frame" x="0.0" y="389" width="375" height="133"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dH6-eV-iGR" id="Qad-zA-JXW">
+                                    <frame key="frameInset" width="375" height="132"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5en-bS-iub">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="5en-bS-iub" firstAttribute="top" secondItem="Qad-zA-JXW" secondAttribute="topMargin" constant="48" id="0SU-0m-YGg"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="5en-bS-iub" secondAttribute="bottom" constant="47" id="hsi-KG-snN"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="5en-bS-iub" secondAttribute="trailing" constant="167" id="jN8-4d-k2X"/>
+                                        <constraint firstItem="5en-bS-iub" firstAttribute="leading" secondItem="Qad-zA-JXW" secondAttribute="leadingMargin" constant="150" id="pNX-qG-6X1"/>
+                                    </constraints>
+                                </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
