--- a/MoppApp/MoppApp/Landing.storyboard
+++ b/MoppApp/MoppApp/Landing.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -42,6 +45,16 @@
             </objects>
             <point key="canvasLocation" x="-2025" y="831"/>
         </scene>
+        <!--PinOperations-->
+        <scene sceneID="9Eh-2h-Ipb">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PinOperations" id="KrG-eX-2pw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Pin Actions" id="OMb-Bl-0XA"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jYz-bf-OdB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2116" y="986"/>
+        </scene>
         <!--Landing Tab Bar Controller-->
         <scene sceneID="XXu-xe-V6X">
             <objects>
@@ -55,7 +68,7 @@
                         <segue destination="bQg-9a-5xz" kind="relationship" relationship="viewControllers" id="f9a-6e-RBo"/>
                         <segue destination="b4N-MH-WmG" kind="relationship" relationship="viewControllers" id="sli-3R-Gwg"/>
                         <segue destination="FAY-20-bhQ" kind="relationship" relationship="viewControllers" id="Wlz-hJ-Kus"/>
-                        <segue destination="OY8-qd-vwj" kind="relationship" relationship="viewControllers" id="1Wo-I3-M5I"/>
+                        <segue destination="KrG-eX-2pw" kind="relationship" relationship="viewControllers" id="w6V-UE-yWP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S8Q-9G-fP8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -75,12 +88,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="04M-CC-EKl">
+                                <rect key="frame" x="130" y="114" width="116" height="30"/>
                                 <state key="normal" title="Read data action"/>
                                 <connections>
                                     <action selector="readCardActionPressed:" destination="xAr-n6-KTB" eventType="touchUpInside" id="bks-OV-nQ2"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KmR-J1-smW">
+                                <rect key="frame" x="115" y="184" width="145" height="30"/>
                                 <state key="normal" title="Create test container"/>
                                 <connections>
                                     <action selector="createContainer:" destination="xAr-n6-KTB" eventType="touchUpInside" id="unt-b6-01o"/>
@@ -100,25 +115,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PTZ-9K-tfv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1063" y="266"/>
-        </scene>
-        <!--Item 4-->
-        <scene sceneID="oS2-Pn-6aW">
-            <objects>
-                <viewController id="OY8-qd-vwj" userLabel="Item 4" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6u2-BI-fa9"/>
-                        <viewControllerLayoutGuide type="bottom" id="4Zh-29-OdU"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="qew-U1-Izq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="SIM actions" id="Tac-jR-JDp"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XqD-AT-vNB" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1815" y="2019"/>
         </scene>
     </scenes>
 </document>
