--- a/MoppApp/MoppApp/LaunchScreen.xib
+++ b/MoppApp/MoppApp/LaunchScreen.xib
@@ -11,17 +11,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MOPP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAM-9h-XFL">
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EU_RegionalDevelopment_horisontaal" translatesAutoresizingMaskIntoConstraints="NO" id="rHJ-c0-GBd"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digidoc_app" translatesAutoresizingMaskIntoConstraints="NO" id="CfH-al-eG7"/>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="zAM-9h-XFL" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="S0M-bF-OCD"/>
-                <constraint firstItem="zAM-9h-XFL" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="rbk-am-RRW"/>
+                <constraint firstItem="CfH-al-eG7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="40" id="5YK-af-O7r"/>
+                <constraint firstItem="rHJ-c0-GBd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="Acl-Ij-buh"/>
+                <constraint firstItem="rHJ-c0-GBd" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="bW7-eT-XtX"/>
+                <constraint firstAttribute="trailing" secondItem="rHJ-c0-GBd" secondAttribute="trailing" constant="20" id="cCW-hz-IOR"/>
+                <constraint firstItem="rHJ-c0-GBd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="eZB-Uc-nNY"/>
+                <constraint firstItem="CfH-al-eG7" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="pok-3v-R45"/>
             </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="EU_RegionalDevelopment_horisontaal" width="350" height="195"/>
+        <image name="digidoc_app" width="126" height="45"/>
+    </resources>
 </document>
