MOPP-176 - updated tabbar elements, documents list and file import navigation flows.

--- a/MoppApp/MoppApp/Landing.storyboard
+++ b/MoppApp/MoppApp/Landing.storyboard
@@ -5,10 +5,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Signed-->
+        <!--Containers-->
         <scene sceneID="peH-oX-y2Q">
             <objects>
-                <viewControllerPlaceholder storyboardName="Signed" id="b4N-MH-WmG" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Containers" id="b4N-MH-WmG" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Signed" id="ga6-PB-Ws7"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vae-w1-17S" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,7 +35,6 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="t4s-7c-07G" kind="relationship" relationship="viewControllers" id="lTE-bT-Me0"/>
                         <segue destination="b4N-MH-WmG" kind="relationship" relationship="viewControllers" id="mgY-BI-w22"/>
                         <segue destination="FAY-20-bhQ" kind="relationship" relationship="viewControllers" id="eap-m2-IzJ"/>
                         <segue destination="POD-22-eUM" kind="relationship" relationship="viewControllers" id="UdE-0E-yMT"/>
@@ -45,16 +44,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S8Q-9G-fP8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2792" y="832"/>
-        </scene>
-        <!--Signing-->
-        <scene sceneID="DPx-nb-l82">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Signing" id="t4s-7c-07G" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Signing" id="Be0-HL-BAf"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Qdl-VP-Xtf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2019" y="544"/>
         </scene>
         <!--Settings-->
         <scene sceneID="3FP-ZZ-bzB">
